<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>program_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chirag@todo.todo">chirag</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>my_py_pkg1</exec_depend>
  <exec_depend>my_cpp_pkg1</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>turtle_chaser</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
